Revision history for Data::Money

0.03
    - Add an overloaded three-way comparator and allow coercion from itself

0.02
    - Strip out formatting (holophrastic)

0.01
    - First version, released on an unsuspecting world.

